fix menu bar z-index add create tournament button

--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -2,7 +2,8 @@
 
 .menu {
   position: sticky;
-  top: 0px;
+  top: 0;
+  z-index: 99999;
   
   background-color: var(--color-primary-light);
   border-bottom: 1px solid black;
